<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:text="@string/homepage"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_logout_24" />

        <!-- Scan Button -->
        <Button
            android:id="@+id/scanButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/light_navy"
            android:text="@string/message_for_scan"
            android:textColor="@color/navy"
            app:icon="@drawable/baseline_document_scanner_24"
            app:iconTint="@color/navy"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <!-- Resistor Material -->
        <TextView
            android:id="@+id/materialTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="18dp"
            android:text="@string/resistor_material"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/scanButton"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/resistorImageView"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/image_of_resistors"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/resistor_image"
            app:layout_constraintTop_toBottomOf="@+id/materialTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Material Button -->
        <Button
            android:id="@+id/materialButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/navy"
            android:text="@string/material"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/resistorImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Tips Section -->
        <TextView
            android:id="@+id/tipsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="18dp"
            android:text="@string/tips"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/materialButton"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTips1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tipsTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgTips1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/scan_detect"
                    android:contentDescription="@string/scan_detect"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/titleTips1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/imgTips1"
                    android:text="@string/scanning_tips"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgTips1"
                    app:layout_constraintTop_toTopOf="@+id/imgTips1" />

                <TextView
                    android:id="@+id/textTips1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@id/imgTips1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/description_tips1"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/imgArrow1"
                    app:layout_constraintStart_toEndOf="@+id/imgTips1"
                    app:layout_constraintTop_toBottomOf="@+id/titleTips1"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/imgArrow1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/image_of_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTips2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTips1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgTips2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/color_wheel"
                    android:contentDescription="@string/color_wheel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/titleTips2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/imgTips2"
                    android:text="@string/color_codes_tips"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/imgTips2"
                    app:layout_constraintTop_toTopOf="@+id/imgTips2" />

                <TextView
                    android:id="@+id/textTips2"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@id/imgTips2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/description_tips2"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/imgArrow2"
                    app:layout_constraintStart_toEndOf="@+id/imgTips2"
                    app:layout_constraintTop_toBottomOf="@+id/titleTips2"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/imgArrow2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:contentDescription="@string/image_of_arrow"
                    app:tint="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>